# stroom-resources

./: .aliases  .env  .gitignore  .travis.yml  LICENCE.txt  README.md  buildAndReleaseNginx.sh  build_local_log_sender_image.sh  build_local_nginx_image.sh  ci_build.sh  ci_build_local.sh  deployToSwarm.sh  docker-compose-no-stats.yml  docker-compose-no-stroom.yml  get_stroom.sh  hbase-kafka-mysql-stroom-zk.yml  hbase-kafka-mysql-zk-nginx.yml  hbase-kafka-mysql-zk.yml  hbase.yml  kafka.yml  licence-header-shell.txt  mux-stats-topics.yml  mykeystore.jks  myserver.csr  myserver.jks  mysql-stroom_5.0-beta.21.yml  mysql-zk.yml  runIt.sh  stats.yml  stopAll.sh  stroom-dbs.yml  stroom.yml  swarm.yml  tag_release-stroom-log-sender.sh  tag_release-stroom-nginx.sh  tag_release-stroom-stacks.sh  tag_release-stroom_core.sh  travis.before.sh  travis.common.sh  travis.script.sh  (+4 more)
ansible/: .gitignore  README.md  aliases.sh  ansible.cfg  clone_gchq_repos.yml  delete.yml  global_variables.yml  install_stack.yml  run_script.yml  update_config.yml  user_variables.yml  variables.yml
deploy/: .env  .gitignore  buildAndReleaseNginx.sh
hbase/: Dockerfile  hbase-site.xml
kafka/: Dockerfile  server.properties
nginx/: Dockerfile  buildAndReleaseNginx.sh  nginx.conf
stroom-log-sender/: Dockerfile  README.md  docker-entrypoint.sh
stroom-log-sender/rust-log-sender/: .gitignore  Cargo.toml  config.yml
stroom-log-sender/rust-log-sender/src/: main.rs  model.rs
stroom-nginx/: Dockerfile  README.md  add_container_identity_headers.sh  docker-entrypoint.sh
swarm/: deployToSwarm.sh  nginx.yml
(+440 files in other folders)
