[package]
name = "rust-log-sender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#curl = "0.4.43"
chrono = "0.2.16"
#color-eyre = "0.6.1"
delay_timer = "0.11.3"
serde = { version = "1.0.137", features = ["derive"] }
serde_yaml = "0.8.24"
smol = "1.2.5"
