[package]
name = "rust-log-sender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#color-eyre = "0.6.1"
#curl = "0.4.43"
#delay_timer = "0.11.3"
#smol = "1.2.5"
#termcolor = "1.1.3"

anyhow = "1.0.57"
chrono = "0.4.19"
env_logger = "0.9.0"
log = "0.4.17"
serde = { version = "1.0.137", features = ["derive"] }
serde_yaml = "0.8.24"
subst = "0.1.2"
tokio = { version = "1.18.2", features = ["full"] }
